@@ -6,9 +6,13 @@ import io.notfound.counsel_back.board.entity.Comment;
 import io.notfound.counsel_back.board.entity.Post;
 import io.notfound.counsel_back.board.repository.CommentRepository;
 import io.notfound.counsel_back.board.repository.PostRepository;
+import io.notfound.counsel_back.user.entity.User;
+import io.notfound.counsel_back.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -20,28 +24,29 @@ public class CommentService {
 
     private final CommentRepository commentRepository;
     private final PostRepository postRepository; // 게시글 존재 여부 확인용
+    private final UserRepository userRepository;
 
-    // 댓글 생성
     @Transactional
-    public CommentResponse createComment(Long postId, CommentRequest request) {
+    // [수정] email 파라미터 추가
+    public CommentResponse createComment(Long postId, CommentRequest request, String email) {
         Post post = postRepository.findById(postId)
                 .orElseThrow(() -> new NoSuchElementException("Post not found with id: " + postId));
 
+        // [수정] 인증된 사용자 정보로 작성자 설정
+        User writer = userRepository.findByEmail(email)
+                .orElseThrow(() -> new NoSuchElementException("User not found with email: " + email));
+
         Comment comment = Comment.builder()
                 .content(request.getContent())
-                .writer(request.getWriter())
+                .writer(writer)
                 .post(post)
                 .build();
 
+        post.addComment(comment);
+
         Comment savedComment = commentRepository.save(comment);
 
-        return CommentResponse.builder()
-                .id(savedComment.getId())
-                .content(savedComment.getContent())
-                .author(savedComment.getAuthor())
-                .createdAt(savedComment.getCreatedAt())
-                .postId(savedComment.getPost().getId())
-                .build();
+        return CommentResponse.from(savedComment); // 정적 팩토리 메서드 사용
     }
 
     // 특정 게시글의 모든 댓글 조회
@@ -54,40 +59,31 @@ public class CommentService {
 
         List<Comment> comments = commentRepository.findAllByPostId(postId);
         return comments.stream()
-                .map(comment -> CommentResponse.builder()
-                        .id(comment.getId())
-                        .content(comment.getContent())
-                        .author(comment.getAuthor())
-                        .createdAt(comment.getCreatedAt())
-                        .postId(comment.getPost().getId())
-                        .build())
-                .collect(Collectors.toList());
+                .map(CommentResponse::from)
+                .toList();
     }
 
     // 댓글 수정
     @Transactional
-    public CommentResponse updateComment(Long commentId, CommentRequest request) {
+    public CommentResponse updateComment(Long commentId, CommentRequest request, String email) {
         Comment comment = commentRepository.findById(commentId)
                 .orElseThrow(() -> new NoSuchElementException("Comment not found with id: " + commentId));
 
-        comment.setContent(request.getContent());
-        
-        Comment updatedComment = commentRepository.save(comment);
+        if (!comment.getWriter().getEmail().equals(email)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "댓글을 수정할 권한이 없습니다.");
+        }
+        comment.update(request.getContent());
 
-        return CommentResponse.builder()
-                .id(updatedComment.getId())
-                .content(updatedComment.getContent())
-                .author(updatedComment.getAuthor())
-                .createdAt(updatedComment.getCreatedAt())
-                .postId(updatedComment.getPost().getId())
-                .build();
+        return CommentResponse.from(comment);
     }
-    
-    // 댓글 삭제
+
     @Transactional
-    public void deleteComment(Long commentId) {
-        if (!commentRepository.existsById(commentId)) {
-            throw new NoSuchElementException("Comment not found with id: " + commentId);
+    public void deleteComment(Long commentId, String email) {
+        Comment comment = commentRepository.findById(commentId)
+                .orElseThrow(() -> new NoSuchElementException("Comment not found with id: " + commentId));
+
+        if (!comment.getWriter().getEmail().equals(email)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "댓글을 삭제할 권한이 없습니다.");
         }
         commentRepository.deleteById(commentId);
     }
